impulse-native-bridge/impulse-ffi/include/engine/body.h

  
  typedef enum
  {
    BODY_TYPE_STATIC = 0,
    BODY_TYPE_DYNAMIC = 1,
    BODY_TYPE_KINEMATIC = 2,
  } BodyType;
  API BodyType eng_body_get_type(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_type(uint32_t space_id, uint64_t body_id, BodyType body_type);
  API bool eng_body_is_static(uint32_t space_id, uint64_t body_id);
  API bool eng_body_is_dynamic(uint32_t space_id, uint64_t body_id);
  API bool eng_body_is_kinematic(uint32_t space_id, uint64_t body_id);
  API Vector3f eng_body_get_position(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_position(uint32_t space_id, uint64_t body_id, Vector3f pos);
  API Quaternion eng_body_get_rotation(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_rotation(uint32_t space_id, uint64_t body_id, Quaternion rot);
  API Vector3f eng_body_get_linear_velocity(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_linear_velocity(uint32_t space_id, uint64_t body_id, Vector3f vel);
  API Vector3f eng_body_get_angular_velocity(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_angular_velocity(uint32_t space_id, uint64_t body_id, Vector3f vel);
  API float eng_body_get_restitution(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_restitution(uint32_t space_id, uint64_t body_id, float restitution);
  API float eng_body_get_friction(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_friction(uint32_t space_id, uint64_t body_id, float friction);
  API float eng_body_get_mass(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_mass(uint32_t space_id, uint64_t body_id, float mass);
  API void eng_body_set_damping(uint32_t space_id, uint64_t body_id, float linear_damping, float angular_damping);
  API bool eng_body_is_sensor(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_sensor(uint32_t space_id, uint64_t body_id, bool sensor);
  API bool eng_body_is_active(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_active(uint32_t space_id, uint64_t body_id, bool active);
  API bool eng_body_is_sleeping(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_sleeping(uint32_t space_id, uint64_t body_id, bool sleep);
  API void eng_body_apply_force(uint32_t space_id, uint64_t body_id, Vector3f force, Vector3f offset);
  API void eng_body_apply_impulse(uint32_t space_id, uint64_t body_id, Vector3f impulse, Vector3f offset);
  API void eng_body_apply_torque(uint32_t space_id, uint64_t body_id, Vector3f torque, bool is_impulse);
  API void eng_body_clear_forces(uint32_t space_id, uint64_t body_id);
  API int32_t eng_body_get_collision_group(uint32_t space_id, uint64_t body_id);
  API int32_t eng_body_get_collision_mask(uint32_t space_id, uint64_t body_id);
  API bool eng_body_is_ccd_enabled(uint32_t space_id, uint64_t body_id);
  API void eng_body_set_ccd_enabled(uint32_t space_id, uint64_t body_id, bool enabled);
  typedef enum
  {
    BOX = 0,
    SPHERE = 1,
    CAPSULE = 2,
    CYLINDER = 3,
    CONE = 4,
    PLANE = 5,
    VOXELS = 6,
    UNKNOWN = 7,
  } BodyShapeType;
  API BodyShapeType eng_body_get_shape_type(uint32_t space_id, uint64_t body_id);
  API float eng_body_get_sphere_radius(uint32_t space_id, uint64_t body_id);
  API Vector3f eng_body_get_box_half_extents(uint32_t space_id, uint64_t body_id);
  API float eng_body_get_half_height(uint32_t space_id, uint64_t body_id);
  API Axis eng_body_get_shape_axis(uint32_t space_id, uint64_t body_id);
  API float eng_body_get_com_y_offset(uint32_t space_id, uint64_t body_id);