impulse-native-bridge/impulse-ffi/include/engine/space.h

  typedef struct
  {
    int64_t step_nanos;
    int64_t broad_phase_nanos;
    int64_t narrow_phase_nanos;
    int64_t solver_nanos;
    int64_t ccd_nanos;
    int64_t snapshot_nanos;
    int8_t available;
  } StepPhaseStats;
  API StepPhaseStats eng_space_get_step_phase_stats(uint32_t space_id);
  API void eng_space_reset_step_phase_stats(uint32_t space_id);
  API int64_t eng_space_create_static_plane(uint32_t space_id, float groundY);
  API int64_t eng_space_create_box(uint32_t space_id, Vector3f half_extent, float mass);
  API int64_t eng_space_create_sphere(uint32_t space_id, float radius, float mass);
  API int64_t eng_space_create_capsule(uint32_t space_id, float radius, float halfHeight, int32_t axis, float mass);
  API int64_t eng_space_create_cylinder(uint32_t space_id, float radius, float halfHeight, int32_t axis, float mass);
  API int64_t eng_space_create_cone(uint32_t space_id, float radius, float halfHeight, int32_t axis, float mass);
  typedef struct
  {
    int64_t body_id;
    Vector3f point;
    Vector3f normal;
    float fraction;
    float distance;
  } RayHit;
  API RayHit eng_space_raycast_closest(uint64_t space_id, Vector3f from, Vector3f to);
  typedef struct
  {
    int64_t bodyA_id;
    int64_t bodyB_id;
    Vector3f pointOnA;
    Vector3f pointOnB;
    Vector3f normalOnB;
    float distance;
    float impulse;
    float _pad;
  } Contact;
  API int32_t eng_space_get_contacts(uint32_t space_id, Contact *output, int32_t max_contacts);
  API int64_t eng_space_create_fixed_joint(uint32_t space_id, int64_t bodyA, int64_t bodyB, Vector3f anchorA, Vector3f anchorB);
  API int64_t eng_space_create_point_joint(uint32_t space_id, int64_t bodyA, int64_t bodyB, Vector3f anchorA, Vector3f anchorB);
  API int64_t eng_space_create_hinge_joint(uint32_t space_id, int64_t bodyA, int64_t bodyB, Vector3f anchorA, Vector3f anchorB, Vector3f axis);
  API int64_t eng_space_create_slider_joint(uint32_t space_id, int64_t bodyA, int64_t bodyB, Vector3f anchorA, Vector3f anchorB, Vector3f axis);
  API int64_t eng_space_create_spring_joint(uint32_t space_id, uint64_t bodyA, uint64_t bodyB, Vector3f anchorA, Vector3f anchorB, float restLength, float stiffness, float damping);
  API void eng_space_remove_joint(uint32_t space_id, uint64_t joint_id);
  API uint32_t eng_space_get_joint_count(uint32_t space_id);
  API void eng_space_destroy(uint32_t space_id);
  typedef void (*JointCallback)(uint64_t joint_id, void *user_data);
  API void eng_space_iterate_joints(uint32_t space_id, JointCallback callback, void *user_data);