impulse-native-bridge/include/engine/joint.h

  typedef enum
  {
    eng_JOINT_FIXED = 0,
    eng_JOINT_POINT = 1,
    eng_JOINT_HINGE = 2,
    eng_JOINT_SLIDER = 3,
    eng_JOINT_SPRING = 4
  } JointType;
  API JointType eng_joint_get_type(uint32_t space_id, uint64_t joint_id);
  API int64_t eng_joint_get_body_a(uint32_t space_id, uint64_t joint_id);
  API int64_t eng_joint_get_body_b(uint32_t space_id, uint64_t joint_id);
  API bool eng_joint_is_enabled(uint32_t space_id, uint64_t joint_id);
  API void eng_joint_set_enabled(uint32_t space_id, uint64_t joint_id, bool enabled);
  API Vector3f eng_joint_get_anchor_a(uint32_t space_id, uint64_t joint_id);
  API Vector3f eng_joint_get_anchor_b(uint32_t space_id, uint64_t joint_id);
  API Vector3f eng_joint_get_axis(uint32_t space_id, uint64_t joint_id);
  API float eng_joint_get_lower_limit(uint32_t space_id, uint64_t joint_id);
  API float eng_joint_get_upper_limit(uint32_t space_id, uint64_t joint_id);
  API void eng_joint_set_limits(uint32_t space_id, uint64_t joint_id, float lowerLimit, float upperLimit);