impulse-native-bridge/impulse-ffi/src/ffi_engine.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of StepPhaseStats"][::std::mem::size_of::<StepPhaseStats>() - 56usize];
    ["Alignment of StepPhaseStats"][::std::mem::align_of::<StepPhaseStats>() - 8usize];
    ["Offset of field: StepPhaseStats::step_nanos"]
        [::std::mem::offset_of!(StepPhaseStats, step_nanos) - 0usize];
    ["Offset of field: StepPhaseStats::broad_phase_nanos"]
        [::std::mem::offset_of!(StepPhaseStats, broad_phase_nanos) - 8usize];
    ["Offset of field: StepPhaseStats::narrow_phase_nanos"]
        [::std::mem::offset_of!(StepPhaseStats, narrow_phase_nanos) - 16usize];
    ["Offset of field: StepPhaseStats::solver_nanos"]
        [::std::mem::offset_of!(StepPhaseStats, solver_nanos) - 24usize];
    ["Offset of field: StepPhaseStats::ccd_nanos"]
        [::std::mem::offset_of!(StepPhaseStats, ccd_nanos) - 32usize];
    ["Offset of field: StepPhaseStats::snapshot_nanos"]
        [::std::mem::offset_of!(StepPhaseStats, snapshot_nanos) - 40usize];
    ["Offset of field: StepPhaseStats::available"]
        [::std::mem::offset_of!(StepPhaseStats, available) - 48usize];
};
unsafe extern "C" {
    pub fn eng_space_get_step_phase_stats(space_id: u32) -> StepPhaseStats;
}
unsafe extern "C" {
    pub fn eng_space_reset_step_phase_stats(space_id: u32);
}
unsafe extern "C" {
    pub fn eng_space_create_static_plane(space_id: u32, groundY: f32) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_box(space_id: u32, half_extent: Vector3f, mass: f32) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_sphere(space_id: u32, radius: f32, mass: f32) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_capsule(
        space_id: u32,
        radius: f32,
        halfHeight: f32,
        axis: i32,
        mass: f32,
    ) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_cylinder(
        space_id: u32,
        radius: f32,
        halfHeight: f32,
        axis: i32,
        mass: f32,
    ) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_cone(
        space_id: u32,
        radius: f32,
        halfHeight: f32,
        axis: i32,
        mass: f32,
    ) -> i64;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RayHit {
    pub body_id: i64,
    pub point: Vector3f,
    pub normal: Vector3f,
    pub fraction: f32,
    pub distance: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of RayHit"][::std::mem::size_of::<RayHit>() - 40usize];
    ["Alignment of RayHit"][::std::mem::align_of::<RayHit>() - 8usize];
    ["Offset of field: RayHit::body_id"][::std::mem::offset_of!(RayHit, body_id) - 0usize];
    ["Offset of field: RayHit::point"][::std::mem::offset_of!(RayHit, point) - 8usize];
    ["Offset of field: RayHit::normal"][::std::mem::offset_of!(RayHit, normal) - 20usize];
    ["Offset of field: RayHit::fraction"][::std::mem::offset_of!(RayHit, fraction) - 32usize];
    ["Offset of field: RayHit::distance"][::std::mem::offset_of!(RayHit, distance) - 36usize];
};
unsafe extern "C" {
    pub fn eng_space_raycast_closest(space_id: u64, from: Vector3f, to: Vector3f) -> RayHit;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Contact {
    pub bodyA_id: i64,
    pub bodyB_id: i64,
    pub pointOnA: Vector3f,
    pub pointOnB: Vector3f,
    pub normalOnB: Vector3f,
    pub distance: f32,
    pub impulse: f32,
    pub _pad: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Contact"][::std::mem::size_of::<Contact>() - 64usize];
    ["Alignment of Contact"][::std::mem::align_of::<Contact>() - 8usize];
    ["Offset of field: Contact::bodyA_id"][::std::mem::offset_of!(Contact, bodyA_id) - 0usize];
    ["Offset of field: Contact::bodyB_id"][::std::mem::offset_of!(Contact, bodyB_id) - 8usize];
    ["Offset of field: Contact::pointOnA"][::std::mem::offset_of!(Contact, pointOnA) - 16usize];
    ["Offset of field: Contact::pointOnB"][::std::mem::offset_of!(Contact, pointOnB) - 28usize];
    ["Offset of field: Contact::normalOnB"][::std::mem::offset_of!(Contact, normalOnB) - 40usize];
    ["Offset of field: Contact::distance"][::std::mem::offset_of!(Contact, distance) - 52usize];
    ["Offset of field: Contact::impulse"][::std::mem::offset_of!(Contact, impulse) - 56usize];
    ["Offset of field: Contact::_pad"][::std::mem::offset_of!(Contact, _pad) - 60usize];
};
unsafe extern "C" {
    pub fn eng_space_get_contacts(space_id: u32, output: *mut Contact, max_contacts: i32) -> i32;
}
unsafe extern "C" {
    pub fn eng_space_create_fixed_joint(
        space_id: u32,
        bodyA: i64,
        bodyB: i64,
        anchorA: Vector3f,
        anchorB: Vector3f,
    ) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_point_joint(
        space_id: u32,
        bodyA: i64,
        bodyB: i64,
        anchorA: Vector3f,
        anchorB: Vector3f,
    ) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_hinge_joint(
        space_id: u32,
        bodyA: i64,
        bodyB: i64,
        anchorA: Vector3f,
        anchorB: Vector3f,
        axis: Vector3f,
    ) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_slider_joint(
        space_id: u32,
        bodyA: i64,
        bodyB: i64,
        anchorA: Vector3f,
        anchorB: Vector3f,
        axis: Vector3f,
    ) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_create_spring_joint(
        space_id: u32,
        bodyA: u64,
        bodyB: u64,
        anchorA: Vector3f,
        anchorB: Vector3f,
        restLength: f32,
        stiffness: f32,
        damping: f32,
    ) -> i64;
}
unsafe extern "C" {
    pub fn eng_space_remove_joint(space_id: u32, joint_id: u64);
}
unsafe extern "C" {
    pub fn eng_space_get_joint_count(space_id: u32) -> u32;
}
unsafe extern "C" {
    pub fn eng_space_destroy(space_id: u32);
}
pub type JointCallback = ::std::option::Option<
    unsafe extern "C" fn(joint_id: u64, user_data: *mut ::std::os::raw::c_void),
>;
unsafe extern "C" {
    pub fn eng_space_iterate_joints(
        space_id: u32,
        callback: JointCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
#[repr(i32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum BodyType {
    BODY_TYPE_STATIC = 0,
    BODY_TYPE_DYNAMIC = 1,
    BODY_TYPE_KINEMATIC = 2,
}
unsafe extern "C" {
    pub fn eng_body_get_type(space_id: u32, body_id: u64) -> BodyType;
}
unsafe extern "C" {
    pub fn eng_body_set_type(space_id: u32, body_id: u64, body_type: BodyType);
}
unsafe extern "C" {
    pub fn eng_body_is_static(space_id: u32, body_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_body_is_dynamic(space_id: u32, body_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_body_is_kinematic(space_id: u32, body_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_body_get_position(space_id: u32, body_id: u64) -> Vector3f;
}
unsafe extern "C" {
    pub fn eng_body_set_position(space_id: u32, body_id: u64, pos: Vector3f);
}
unsafe extern "C" {
    pub fn eng_body_get_rotation(space_id: u32, body_id: u64) -> Quaternion;
}
unsafe extern "C" {
    pub fn eng_body_set_rotation(space_id: u32, body_id: u64, rot: Quaternion);
}
unsafe extern "C" {
    pub fn eng_body_get_linear_velocity(space_id: u32, body_id: u64) -> Vector3f;
}
unsafe extern "C" {
    pub fn eng_body_set_linear_velocity(space_id: u32, body_id: u64, vel: Vector3f);
}
unsafe extern "C" {
    pub fn eng_body_get_angular_velocity(space_id: u32, body_id: u64) -> Vector3f;
}
unsafe extern "C" {
    pub fn eng_body_set_angular_velocity(space_id: u32, body_id: u64, vel: Vector3f);
}
unsafe extern "C" {
    pub fn eng_body_get_restitution(space_id: u32, body_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_body_set_restitution(space_id: u32, body_id: u64, restitution: f32);
}
unsafe extern "C" {
    pub fn eng_body_get_friction(space_id: u32, body_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_body_set_friction(space_id: u32, body_id: u64, friction: f32);
}
unsafe extern "C" {
    pub fn eng_body_get_mass(space_id: u32, body_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_body_set_mass(space_id: u32, body_id: u64, mass: f32);
}
unsafe extern "C" {
    pub fn eng_body_set_damping(
        space_id: u32,
        body_id: u64,
        linear_damping: f32,
        angular_damping: f32,
    );
}
unsafe extern "C" {
    pub fn eng_body_is_sensor(space_id: u32, body_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_body_set_sensor(space_id: u32, body_id: u64, sensor: bool);
}
unsafe extern "C" {
    pub fn eng_body_is_active(space_id: u32, body_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_body_set_active(space_id: u32, body_id: u64, active: bool);
}
unsafe extern "C" {
    pub fn eng_body_is_sleeping(space_id: u32, body_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_body_set_sleeping(space_id: u32, body_id: u64, sleep: bool);
}
unsafe extern "C" {
    pub fn eng_body_apply_force(space_id: u32, body_id: u64, force: Vector3f, offset: Vector3f);
}
unsafe extern "C" {
    pub fn eng_body_apply_impulse(space_id: u32, body_id: u64, impulse: Vector3f, offset: Vector3f);
}
unsafe extern "C" {
    pub fn eng_body_apply_torque(space_id: u32, body_id: u64, torque: Vector3f, is_impulse: bool);
}
unsafe extern "C" {
    pub fn eng_body_clear_forces(space_id: u32, body_id: u64);
}
unsafe extern "C" {
    pub fn eng_body_get_collision_group(space_id: u32, body_id: u64) -> i32;
}
unsafe extern "C" {
    pub fn eng_body_get_collision_mask(space_id: u32, body_id: u64) -> i32;
}
unsafe extern "C" {
    pub fn eng_body_is_ccd_enabled(space_id: u32, body_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_body_set_ccd_enabled(space_id: u32, body_id: u64, enabled: bool);
}
#[repr(i32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum BodyShapeType {
    BOX = 0,
    SPHERE = 1,
    CAPSULE = 2,
    CYLINDER = 3,
    CONE = 4,
    PLANE = 5,
    VOXELS = 6,
    UNKNOWN = 7,
}
unsafe extern "C" {
    pub fn eng_body_get_shape_type(space_id: u32, body_id: u64) -> BodyShapeType;
}
unsafe extern "C" {
    pub fn eng_body_get_sphere_radius(space_id: u32, body_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_body_get_box_half_extents(space_id: u32, body_id: u64) -> Vector3f;
}
unsafe extern "C" {
    pub fn eng_body_get_half_height(space_id: u32, body_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_body_get_shape_axis(space_id: u32, body_id: u64) -> Axis;
}
unsafe extern "C" {
    pub fn eng_body_get_com_y_offset(space_id: u32, body_id: u64) -> f32;
}
#[repr(i32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum eng_JointType {
    eng_JOINT_FIXED = 0,
    eng_JOINT_POINT = 1,
    eng_JOINT_HINGE = 2,
    eng_JOINT_SLIDER = 3,
    eng_JOINT_SPRING = 4,
}
unsafe extern "C" {
    pub fn eng_joint_get_type(space_id: u32, joint_id: u64) -> eng_JointType;
}
unsafe extern "C" {
    pub fn eng_joint_get_body_a(space_id: u32, joint_id: u64) -> i64;
}
unsafe extern "C" {
    pub fn eng_joint_get_body_b(space_id: u32, joint_id: u64) -> i64;
}
unsafe extern "C" {
    pub fn eng_joint_is_enabled(space_id: u32, joint_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_joint_set_enabled(space_id: u32, joint_id: u64, enabled: bool);
}
unsafe extern "C" {
    pub fn eng_joint_get_anchor_a(space_id: u32, joint_id: u64) -> Vector3f;
}
unsafe extern "C" {
    pub fn eng_joint_get_anchor_b(space_id: u32, joint_id: u64) -> Vector3f;
}
unsafe extern "C" {
    pub fn eng_joint_get_axis(space_id: u32, joint_id: u64) -> Vector3f;
}
unsafe extern "C" {
    pub fn eng_joint_get_lower_limit(space_id: u32, joint_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_joint_get_upper_limit(space_id: u32, joint_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_joint_set_limits(space_id: u32, joint_id: u64, lowerLimit: f32, upperLimit: f32);
}
